# py-poc

JSONtoXML-py/: README.md  jsonToXml.py  sample.xml  xmlToJson.py
M-TA-Py/: .gitignore  README.md  listener.py  mongo-extract.py  twitter.py
NLTK-train/: .gitignore  README.md  requirements.txt
News-Scraper/: __main__.py
dotenv-type/: main.py  main_pydantic.py  test_main.py  test_optional_main.py
ecu-cities-htmx/: .gitignore  README.md  __main__.coco  devenv.nix  requirements.txt
ecu-turismo/: views.py
likes/: README.md  main.py  requirements.txt
lucho-mellera/: .gitignore  README.md  devenv.nix  requirements.txt  shows.json
ollama/: .gitignore  README.md  devenv.nix  requirements.txt  test1.py  test2.py  test3.py
playing-with-async-py/: README.md  async-http.py  async-queue.py  cooperative-concurrency-blocking-calls.py  requirements.txt  simple-concurrency.py  sync-http.py  sync-queue.py
popular-babynames/: README.md  requirements.txt  setup.py
rag-lc/: requirements.txt
shortener-coconut/: .gitignore  README.md  pyproject.toml  run.coco
shortener-coconut/shortener/: __init__.coco
shortener-coconut/shortener/short/: api.coco  schema.coco
shortener-coconut/shortener/templates/: base.html
shortener-coconut/tests/short/: test_short.coco
survey-4-dummies/: .devenv.flake.nix  .gitignore  README.md  devenv.nix  embeddings.db  main.py  requirements.txt
try-poetry/: README.md  app.py  ex.py  pyproject.toml  shell.nix
try-poetry/templates/: index.html
typed-cli/: devenv.nix  main.py  requirements.txt
typing/: metadata.py
(+41 files in other folders)
