[tool.poetry]
name = "shortener"
version = "0.1.0"
description = ""
authors = ["CristhianMotoche <cristhian.motoche@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
coconut = {extras = ["watch"], version = "^1.4.3"}
mypy = "^0.790"
coconut-develop = {extras = ["mypy"], version = "^1.4.3"}
Flask = "^1.1.2"
flask-smorest = "^0.27.0"
flask-cors = "^3.0.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
