[tool.poetry]
name = "try-poetry"
version = "0.1.0"
description = "Testing poetry"
authors = ["CristhianMotoche <cristhian.motoche@gmail.com>"]
license = "WTFPL"

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1"
jsonschema = "^3.0"
Flask-Inputs = "^0.3.0"
requests = "^2.22"
Flask-WTF = "^0.14.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
